tarball; added fixprecompile target in case git clone leaves you with precompiled files older than their respective source files.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all bootstrap cleantarget clean realclean distclean libec ecp ecc ecs
+.PHONY: all bootstrap cleantarget clean realclean distclean libec ecp ecc ecs fixprecompile
 ifneq "$V" "1"
 .SILENT:
 endif
@@ -9,6 +9,9 @@ include ../crossplatform.mk
 include ../default.cf
 
 all: ecp ecc ecs
+
+fixprecompile:
+	cd libec && $(MAKE) fixprecompile
 
 libec:
 	@$(call echo,Building 2nd stage libec...)
