ecere, ide; Instance_COM_Initialize, Tokenize, _DualPipeOpen; multiple fixes. finally closes #778, #777 and #863.
 - affects all command line tools.
 - fixed windows arguments parsing to respect spaces and double quotes that are escaped.
 - adjusted toolchaing debugging tools to not alter the way args are passed to the debugging ide now that win args parsing is fixed.
 - fixed preprocessor definitions when defining MY_STR_DEF="string" on windows by escaping quotes.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -54,7 +54,7 @@ clean:
 realclean:
 	cd bootstrap && $(MAKE) realclean
 	cd libec && $(MAKE) realclean
-	cd libec && $(MAKE) fixprecompile
+	cd libec && $(MAKE) silentfixprecompile
 	cd ecp && $(MAKE) realclean
 	cd ecc && $(MAKE) realclean
 	cd ecs && $(MAKE) realclean
@@ -62,7 +62,7 @@ realclean:
 distclean:
 	cd bootstrap && $(MAKE) distclean
 	cd libec && $(MAKE) distclean
-	cd libec && $(MAKE) fixprecompile
+	cd libec && $(MAKE) silentfixprecompile
 	cd ecp && $(MAKE) distclean
 	cd ecc && $(MAKE) distclean
 	cd ecs && $(MAKE) distclean
