installer: Updated for TDM-GCC 4.8.1; Updated licenses - Licenses were updated to more accurately reflect the licenses applying to the various MinGW-w64 components - A new tab was added to the IDE/installer/licensing sample specifically for the MinGW-w64 runtime - The GCC, GDB tab was updated to contain all licenses pertaining to the various TDM-GCC components - The generic GPL license previously used for GCC/GDB was renamed to gpl2 and GPLv3 and LGPLv2/v3 were added as well - TDM-GCC/MinGW-w64 licenses are no longer part of the optional documentation components (which were not   installed by default) and are now always installed in Program Files/Ecere SDK/tdm/licenses - Tabs were added to the licensing sample to reflect all acknowledgements required for the default Ecere dll

--- a/ide/Makefile
+++ b/ide/Makefile
@@ -177,7 +177,9 @@ RESOURCES2 = \
 	../extras/res/licenses/freetype.LICENSE \
 	../extras/res/licenses/harfbuzz.LICENSE \
 	../extras/res/licenses/upx.LICENSE \
-	../extras/res/licenses/gpl.LICENSE \
+	../extras/res/licenses/MinGW-w64.LICENSE \
+	../extras/res/licenses/tdm-gcc.LICENSE \
+	../extras/res/licenses/ffi.LICENSE \
 	res/ecere.jpg \
 	res/ecereBack.jpg \
 	res/icon.png \
@@ -274,7 +276,7 @@ endif
 	$(EAR) aw$(EARFLAGS) $(TARGET) locale/ru_RU/LC_MESSAGES/ide.mo "locale/ru_RU/LC_MESSAGES"
 	$(EAR) aw$(EARFLAGS) $(TARGET) locale/vi_VI/LC_MESSAGES/ide.mo "locale/vi_VI/LC_MESSAGES"
 	$(EAR) aw$(EARFLAGS) $(TARGET) ../LICENSE ../extras/res/licenses/png.LICENSE ../extras/res/licenses/tango.COPYING ../extras/res/licenses/zlib.README ../extras/res/licenses/sqlite.LICENSE ../extras/res/licenses/jpg.LICENSE ../extras/res/licenses/ungif.LICENSE ../extras/res/licenses/freetype.LICENSE ../extras/res/licenses/harfbuzz.LICENSE ../extras/res/licenses/upx.LICENSE "licenses"
-	$(EAR) aw$(EARFLAGS) $(TARGET) ../extras/res/licenses/gpl.LICENSE "licenses"
+	$(EAR) aw$(EARFLAGS) $(TARGET) ../extras/res/licenses/MinGW-w64.LICENSE ../extras/res/licenses/tdm-gcc.LICENSE ../extras/res/licenses/ffi.LICENSE "licenses"
 else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
