--- a/ide/Makefile
+++ b/ide/Makefile
@@ -180,6 +180,16 @@ RESOURCES2 = \
 	../extras/res/licenses/MinGW-w64.LICENSE \
 	../extras/res/licenses/tdm-gcc.LICENSE \
 	../extras/res/licenses/ffi.LICENSE \
+	../extras/res/types/countryCode/es.png \
+	../extras/res/types/countryCode/gb.png \
+	../extras/res/types/countryCode/hu.png \
+	../extras/res/types/countryCode/cn.png \
+	../extras/res/types/countryCode/pt.png \
+	../extras/res/types/countryCode/vn.png \
+	../extras/res/types/countryCode/ru.png \
+	../extras/res/types/countryCode/in.png \
+	../extras/res/types/countryCode/nl.png \
+	../extras/res/types/countryCode/il.png \
 	res/ecere.jpg \
 	res/ecereBack.jpg \
 	res/icon.png \
@@ -277,6 +287,7 @@ endif
 	$(EAR) aw$(EARFLAGS) $(TARGET) locale/vi_VI/LC_MESSAGES/ide.mo "locale/vi_VI/LC_MESSAGES"
 	$(EAR) aw$(EARFLAGS) $(TARGET) ../LICENSE ../extras/res/licenses/png.LICENSE ../extras/res/licenses/tango.COPYING ../extras/res/licenses/zlib.README ../extras/res/licenses/sqlite.LICENSE ../extras/res/licenses/jpg.LICENSE ../extras/res/licenses/ungif.LICENSE ../extras/res/licenses/freetype.LICENSE ../extras/res/licenses/harfbuzz.LICENSE ../extras/res/licenses/upx.LICENSE "licenses"
 	$(EAR) aw$(EARFLAGS) $(TARGET) ../extras/res/licenses/MinGW-w64.LICENSE ../extras/res/licenses/tdm-gcc.LICENSE ../extras/res/licenses/ffi.LICENSE "licenses"
+	$(EAR) aw$(EARFLAGS) $(TARGET) ../extras/res/types/countryCode/es.png ../extras/res/types/countryCode/gb.png ../extras/res/types/countryCode/hu.png ../extras/res/types/countryCode/cn.png ../extras/res/types/countryCode/pt.png ../extras/res/types/countryCode/vn.png ../extras/res/types/countryCode/ru.png ../extras/res/types/countryCode/in.png ../extras/res/types/countryCode/nl.png ../extras/res/types/countryCode/il.png "countryCode"
 else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
