ide: no functional change. rename various debug print line function calls. use ecere-sdk/extras/include/dpl.ec file.

--- a/ide/Makefile
+++ b/ide/Makefile
@@ -49,6 +49,7 @@ _ECSOURCES = \
 	../extras/gui/layout.ec \
 	../extras/gui/controls/StringsBox.ec \
 	../extras/types/DynamicString.ec \
+	../extras/include/dpl.ec \
 	src/dialogs/CompilersDetectionDialog.ec \
 	src/dialogs/FindInFilesDialog.ec \
 	src/dialogs/GlobalSettingsDialog.ec \
@@ -210,7 +211,8 @@ PRJ_CFLAGS += \
 			 -I/usr/X11R6/include,) \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w \
 			 $(FVISIBILITY) \
-			 -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\""
+			 -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\"" \
+			 -I../extras/include
 
 ECFLAGS += -module $(MODULE)
 ECFLAGS += \
@@ -302,6 +304,9 @@ $(OBJ)StringsBox.sym: ../extras/gui/controls/StringsBox.ec
 
 $(OBJ)DynamicString.sym: ../extras/types/DynamicString.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c ../extras/types/DynamicString.ec -o $(OBJ)DynamicString.sym
+
+$(OBJ)dpl.sym: ../extras/include/dpl.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c ../extras/include/dpl.ec -o $(OBJ)dpl.sym
 
 $(OBJ)CompilersDetectionDialog.sym: src/dialogs/CompilersDetectionDialog.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c src/dialogs/CompilersDetectionDialog.ec -o $(OBJ)CompilersDetectionDialog.sym
@@ -438,6 +443,9 @@ $(OBJ)StringsBox.c: ../extras/gui/controls/StringsBox.ec $(OBJ)StringsBox.sym | 
 $(OBJ)DynamicString.c: ../extras/types/DynamicString.ec $(OBJ)DynamicString.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c ../extras/types/DynamicString.ec -o $(OBJ)DynamicString.c -symbols $(OBJ)
 
+$(OBJ)dpl.c: ../extras/include/dpl.ec $(OBJ)dpl.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c ../extras/include/dpl.ec -o $(OBJ)dpl.c -symbols $(OBJ)
+
 $(OBJ)CompilersDetectionDialog.c: src/dialogs/CompilersDetectionDialog.ec $(OBJ)CompilersDetectionDialog.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c src/dialogs/CompilersDetectionDialog.ec -o $(OBJ)CompilersDetectionDialog.c -symbols $(OBJ)
 
@@ -572,6 +580,9 @@ $(OBJ)StringsBox.o: $(OBJ)StringsBox.c
 
 $(OBJ)DynamicString.o: $(OBJ)DynamicString.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(OBJ)DynamicString.c -o $(OBJ)DynamicString.o
+
+$(OBJ)dpl.o: $(OBJ)dpl.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(OBJ)dpl.c -o $(OBJ)dpl.o
 
 $(OBJ)CompilersDetectionDialog.o: $(OBJ)CompilersDetectionDialog.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(OBJ)CompilersDetectionDialog.c -o $(OBJ)CompilersDetectionDialog.o
