ide: Fixed OS X/Linux build broken by d7347cce4dfa06e7e1da817c3168b5bc7e198fbd - Must now link IDE with -lm

--- a/ide/Makefile
+++ b/ide/Makefile
@@ -224,7 +224,8 @@ ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
 	 -L/usr/X11R6/lib
 LIBS += \
-	$(call _L,X11)
+	$(call _L,X11) \
+	$(call _L,m)
 endif
 
 else
@@ -234,7 +235,8 @@ ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
 	 -L/usr/X11R6/lib
 LIBS += \
-	$(call _L,X11)
+	$(call _L,X11) \
+	$(call _L,m)
 endif
 
 endif
