compiler/libec: (#18, #26, #439, #685) Fixed serious performance issues and warnings ('declared inside parameter list') - Proper identification of dependencies between C external declarations (edges of the graph) - Implementation of a Topological Sort with support for breaking edges with forward declarations - Algorithm based on description and pseudo code from en.wikipedia.org/wiki/Topological_sorting (first described by Kahn, 1962) - (#18) Since we no longer have spurious warnings from bad generated C code, it is no longer necessary to perform any kind of   filtering in the IDE build output and parallel builds will show all warnings - Removed precompiled rules and source files as the grammar files now build as fast as any other files - Fixed duplicate 'static' qualifiers for self watchers in classes declare static - Improvements to the generated C code to reduce the number of differences with the bootstrap and not hard code struct sizes    - Using actual size of structs and sizeof(void *)    - Passing 0xF000F000 to eMember_/eClass_AddDataMember for 'alignment' now means 'pointer size alignment'

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all bootstrap cleantarget clean realclean distclean libec ecp ecc ecs fixprecompile
+.PHONY: all bootstrap cleantarget clean realclean distclean libec ecp ecc ecs
 ifneq "$V" "1"
 .SILENT:
 endif
@@ -10,13 +10,7 @@ include ../default.cf
 
 all: ecp ecc ecs
 
-fixprecompile:
-	cd libec && $(MAKE) fixprecompile
-
-precompile:
-	cd libec && $(MAKE) PRECOMPILE_RULES=1 precompile
-
-libec: precompile
+libec:
 	@$(call echo,Building 2nd stage libec...)
 	cd libec && $(MAKE)
 
@@ -46,7 +40,6 @@ cleantarget:
 clean:
 	cd bootstrap && $(MAKE) clean
 	cd libec && $(MAKE) clean
-	cd libec && $(MAKE) silentfixprecompile
 	cd ecp && $(MAKE) clean
 	cd ecc && $(MAKE) clean
 	cd ecs && $(MAKE) clean
@@ -54,7 +47,6 @@ clean:
 realclean:
 	cd bootstrap && $(MAKE) realclean
 	cd libec && $(MAKE) realclean
-	cd libec && $(MAKE) silentfixprecompile
 	cd ecp && $(MAKE) realclean
 	cd ecc && $(MAKE) realclean
 	cd ecs && $(MAKE) realclean
@@ -62,7 +54,6 @@ realclean:
 distclean:
 	cd bootstrap && $(MAKE) distclean
 	cd libec && $(MAKE) distclean
-	cd libec && $(MAKE) silentfixprecompile
 	cd ecp && $(MAKE) distclean
 	cd ecc && $(MAKE) distclean
 	cd ecs && $(MAKE) distclean
